This commit was manufactured by cvs2svn to create tag 'VEL_1_1_RC2'.
git-svn-id: https://svn.apache.org/repos/asf/jakarta/velocity/tags/VEL_1_1_RC2@75066 13f79535-47bb-0310-9956-ffa450edef68

--- a/test/templates/compare/logical.cmp
+++ b/test/templates/compare/logical.cmp
@@ -97,3 +97,15 @@ right
 right
 
 right
+
+----------------------
+goofy but legal stuff
+----------------------
+Should equal true : true
+
+Should equal true : true
+
+Should equal true : true
+
+Should equal true : true
+
