--- a/test/templates/logical.vm
+++ b/test/templates/logical.vm
@@ -266,3 +266,19 @@ wrong
 #else
 right
 #end
+
+----------------------
+goofy but legal stuff
+----------------------
+#set($lala = ( false || true ) )
+Should equal true : $lala
+
+#set($fofo = ( true && true ) )
+Should equal true : $fofo
+
+#set($fofo = ( true && ( false || true ) ) )
+Should equal true : $fofo
+
+#set($fofo = ( ($t || $f) && $t))
+Should equal true : $fofo
+
