Testcases for backported fixes for disp curly and 'nit' parser bugs. PR: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/jakarta/velocity/branches/VEL_1_2_BRANCH@75412 13f79535-47bb-0310-9956-ffa450edef68

--- a/test/templates/formal.vm
+++ b/test/templates/formal.vm
@@ -34,3 +34,13 @@ $provider.getHashtable().get( "key0")
 $provider.getHashtable().get("key1" )
 $provider.getHashtable().get(   "key2"                 )
 $provider.getHashtable().get("floogie!")
+
+## curly wierdness
+
+{$provider.Title
+$provider.Title}
+{$provider.Title}
+$provider}.Title
+${provider}.Title
+$provider{.Title
+
