--- a/test/templates/compare/formal.cmp
+++ b/test/templates/compare/formal.cmp
@@ -23,3 +23,12 @@ value0
 value1
 value2
 $provider.getHashtable().get("floogie!")
+
+
+{lunatic
+lunatic}
+{lunatic}
+test provider}.Title
+test provider.Title
+test provider{.Title
+
